--- a/language/Spanish (Venezuela)/strings.po
+++ b/language/Spanish (Venezuela)/strings.po
@@ -9,687 +9,509 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: XBMC Translation Team\n"
-"Language-Team: English (http://www.transifex.com/projects/p/xbmc-main/language/en/)\n"
+"Language-Team: Spanish (Venezuela) (http://www.transifex.com/projects/p/xbmc-main/language/es_VE/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
+"Language: es_VE\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-#Misc labels
 
 msgctxt "#31000"
 msgid "Change Your"
-msgstr ""
-
-#empty strings from id 31001 to 31002
+msgstr "Cambia tu"
 
 msgctxt "#31003"
 msgid "Power Options"
-msgstr ""
+msgstr "Opciones de apagado"
 
 msgctxt "#31004"
 msgid "Working..."
-msgstr ""
+msgstr "Cargando..."
 
 msgctxt "#31005"
 msgid "Hide Information"
-msgstr ""
+msgstr "Ocultar información"
 
 msgctxt "#31006"
 msgid "View Options"
-msgstr ""
-
-#empty string with id 31007
+msgstr "Ver opciones"
 
 msgctxt "#31008"
 msgid "Full screen"
-msgstr ""
+msgstr "Pantalla completa"
 
 msgctxt "#31009"
 msgid "Total Duration"
-msgstr ""
-
-#empty strings from id 31010 to 31021
+msgstr "Duración total"
 
 msgctxt "#31022"
 msgid "Music - Files"
-msgstr ""
+msgstr "Música - Archivos"
 
 msgctxt "#31023"
 msgid "Playing"
-msgstr ""
+msgstr "Reproduciendo"
 
 msgctxt "#31024"
 msgid "Page"
-msgstr ""
+msgstr "Página"
 
 msgctxt "#31025"
 msgid "Items"
-msgstr ""
+msgstr "Items"
 
 msgctxt "#31026"
 msgid "Misc Options"
-msgstr ""
+msgstr "Opciones misceláneas"
 
 msgctxt "#31027"
 msgid "Location"
-msgstr ""
-
-#View Type labels
+msgstr "Ubicación"
 
 msgctxt "#31028"
 msgid "Poster Wrap"
-msgstr ""
+msgstr "Afiche"
 
 msgctxt "#31029"
 msgid "Fanart"
-msgstr ""
-
-#empty string with id 31030
+msgstr "Fanart"
 
 msgctxt "#31031"
 msgid "Pic Thumbs"
-msgstr ""
+msgstr "Miniaturas"
 
 msgctxt "#31032"
 msgid "Image Wrap"
-msgstr ""
+msgstr "Imagen"
 
 msgctxt "#31033"
 msgid "Info"
-msgstr ""
-
-#empty strings from id 31034 to 31038
+msgstr "Información"
 
 msgctxt "#31039"
 msgid "Actions"
-msgstr ""
-
-#Extra labels
-
-msgctxt "#31040"
-msgid "Now Playing"
-msgstr ""
-
-#empty string with id 31041
+msgstr "Acciones"
 
 msgctxt "#31042"
 msgid "PLAYING"
-msgstr ""
+msgstr "REPRODUCIENDO"
 
 msgctxt "#31043"
 msgid "PAUSED"
-msgstr ""
+msgstr "PAUSA"
 
 msgctxt "#31044"
 msgid "FAST FORWARD"
-msgstr ""
+msgstr "ADELANTAR"
 
 msgctxt "#31045"
 msgid "REWIND"
-msgstr ""
+msgstr "RETROCEDER"
 
 msgctxt "#31046"
 msgid "SEEKING"
-msgstr ""
-
-#empty string with id 31047
+msgstr "BUSCANDO"
 
 msgctxt "#31048"
 msgid "Visualisation Presets"
-msgstr ""
-
-msgctxt "#31049"
-msgid "End Time"
-msgstr ""
+msgstr "Ajustes de Visualización"
 
 msgctxt "#31050"
 msgid "Sort: Ascending"
-msgstr ""
+msgstr "Orden: Ascendente"
 
 msgctxt "#31051"
 msgid "Sort: Descending"
-msgstr ""
-
-#empty strings from id 31052 to 31054
-#Playlist Editor labels
+msgstr "Orden: Descendente"
 
 msgctxt "#31055"
 msgid "Open playlist"
-msgstr ""
+msgstr "Abrir lista de reproducción"
 
 msgctxt "#31056"
 msgid "Save playlist"
-msgstr ""
+msgstr "Guardar lista de reproducción"
 
 msgctxt "#31057"
 msgid "Close playlist"
-msgstr ""
+msgstr "Cerrar lista de reproducción"
 
 msgctxt "#31058"
 msgid "System music files"
-msgstr ""
+msgstr "Archivos de música del sistema"
 
 msgctxt "#31059"
 msgid "Current playlist"
-msgstr ""
-
-msgctxt "#31060"
-msgid "This file is stacked, select the part you want to play from."
-msgstr ""
+msgstr "Lista de reproducción actual"
 
 msgctxt "#31061"
 msgid "Current Selected"
-msgstr ""
-
-#empty strings from id 31062 to 31100
-#Skin Settings labels
+msgstr "Selección actual"
 
 msgctxt "#31101"
 msgid "Home screen options"
-msgstr ""
+msgstr "Opciones de pantalla inicial"
 
 msgctxt "#31102"
 msgid "Background"
-msgstr ""
+msgstr "Fondo"
 
 msgctxt "#31103"
 msgid "Show \"Paused\" in picture slide show"
-msgstr ""
+msgstr "Mostrar \"Pausado\" en presentación de imágenes"
 
 msgctxt "#31104"
 msgid "Play Trailers in a window [COLOR=grey3](Video Information Dialogue Only)[/COLOR]"
-msgstr ""
-
-#empty string with id 31105
+msgstr "Reproducir trailers en una ventana [COLOR=grey3](Unicamente Diálogo de Información de Video)[/COLOR]"
 
 msgctxt "#31106"
 msgid "Miscellaneous options"
-msgstr ""
-
-msgctxt "#31107"
-msgid "Hide Flagging read from video filenames [COLOR=grey3](Blu-ray, HD-DVD)[/COLOR]"
-msgstr ""
+msgstr "Opciones misceláneas"
 
 msgctxt "#31108"
 msgid "Hide Main Menu Buttons"
-msgstr ""
+msgstr "Ocultar botones del Menú Principal"
 
 msgctxt "#31109"
 msgid "Enable Custom Background"
-msgstr ""
+msgstr "Habilitar fondo customizado"
 
 msgctxt "#31110"
 msgid "Background path:"
-msgstr ""
+msgstr "Ruta de archivos de fondo:"
 
 msgctxt "#31111"
 msgid "Hide"
-msgstr ""
+msgstr "Ocultar"
 
 msgctxt "#31112"
 msgid "Options"
-msgstr ""
-
-#empty strings from id 31113 to 31115
+msgstr "Opciones"
 
 msgctxt "#31116"
 msgid "Show Recently added Albums"
-msgstr ""
+msgstr "Mostrar Albumes agregados recientemente"
 
 msgctxt "#31117"
 msgid "Show Recently added Videos"
-msgstr ""
+msgstr "Mostrar Videos agregados recientemente"
 
 msgctxt "#31118"
 msgid "Home Page Programs Sub-menu"
-msgstr ""
+msgstr "Sub menu de Programas en la Página Principal"
 
 msgctxt "#31119"
 msgid "Hide Background Fanart"
-msgstr ""
-
-#empty strings from id 31120 to 31123
-
-msgctxt "#31124"
-msgid "Show Background \"Now Playing\" Video"
-msgstr ""
-
-msgctxt "#31125"
-msgid "Show Background \"Now Playing\" Visualisation"
-msgstr ""
+msgstr "Ocultar fondo de Fanart"
 
 msgctxt "#31126"
 msgid "Play TV theme songs in video library (TvTunes add-on)"
-msgstr ""
+msgstr "Reproducir canciones del show de TV en la librería de video (TvTunes add-on)"
 
 msgctxt "#31127"
 msgid "TvTunes"
-msgstr ""
+msgstr "TvTunes"
 
 msgctxt "#31128"
 msgid "Lyrics"
-msgstr ""
+msgstr "Letras de canciones"
 
 msgctxt "#31129"
 msgid "Hide Fanart in full screen visualisation"
-msgstr ""
-
-#empty strings from id 31130 to 31131
+msgstr "Ocultar \"Fanart\" en visualización en pantalla completa"
 
 msgctxt "#31132"
 msgid "Lyrics Add-on"
-msgstr ""
-
-#empty string with id 31133
+msgstr "Add-on para letras de canciones"
 
 msgctxt "#31134"
 msgid "Home Page Videos Sub-menu"
-msgstr ""
+msgstr "Sub menu de Videos en la Página Principal"
 
 msgctxt "#31135"
 msgid "Home Page Music Sub-menu"
-msgstr ""
+msgstr "Sub menu de Música en la Página Principal"
 
 msgctxt "#31136"
 msgid "Home Page Pictures Sub-menu"
-msgstr ""
-
-#empty strings from id 31137 to 31139
+msgstr "Sub menu de Imágenes en la Página Principal"
 
 msgctxt "#31140"
 msgid "Music OSD"
-msgstr ""
+msgstr "OSD de Música"
 
 msgctxt "#31141"
 msgid "Video OSD"
-msgstr ""
+msgstr "OSD de Video"
 
 msgctxt "#31142"
 msgid "Settings level"
-msgstr ""
-
-#empty strings from id 31143 to 31199
-#Script labels
+msgstr "Nivel de configuración"
 
 msgctxt "#31200"
 msgid "Shortcuts"
-msgstr ""
-
-#empty strings from id 31201 to 31202
+msgstr "Accesos directos"
 
 msgctxt "#31203"
 msgid "Choose Your Song"
-msgstr ""
-
-#empty string with id 31204
+msgstr "Selecciona tu canción"
 
 msgctxt "#31205"
 msgid "Lyrics Source"
-msgstr ""
+msgstr "Origen de letras de canciones"
 
 msgctxt "#31206"
 msgid "Found"
-msgstr ""
+msgstr "Encontrado"
 
 msgctxt "#31207"
 msgid "Find More Items"
-msgstr ""
+msgstr "Buscar más"
 
 msgctxt "#31208"
 msgid "Upcoming Episodes"
-msgstr ""
-
-#empty strings from id 31209 to 31299
-#Extra labels
+msgstr "Episodios por venir "
 
 msgctxt "#31300"
 msgid "Current Temp"
-msgstr ""
+msgstr "Temperatura actual"
 
 msgctxt "#31301"
 msgid "Last Updated"
-msgstr ""
-
-#empty string with id 31302
+msgstr "Ultima vez actualizado"
 
 msgctxt "#31303"
 msgid "Data provider"
-msgstr ""
-
-#empty strings from id 31304 to 31306
+msgstr "Proveedor de datos"
 
 msgctxt "#31307"
 msgid "Hide Fanart"
-msgstr ""
+msgstr "Ocultar Fanart"
 
 msgctxt "#31308"
 msgid "Movie Details"
-msgstr ""
+msgstr "Detalles de la pélicula"
 
 msgctxt "#31309"
 msgid "Memory Used:"
-msgstr ""
+msgstr "Memoria usada:"
 
 msgctxt "#31310"
 msgid "Track Number"
-msgstr ""
+msgstr "Número de canción"
 
 msgctxt "#31311"
 msgid "Fanart image[CR][CR]Unavailable[CR][CR] Click button to set"
-msgstr ""
+msgstr "Imagen Fanart [CR][CR]No Disponible[CR][CR] Presiona el botón para seleccionar"
 
 msgctxt "#31312"
 msgid "Current Scraper"
-msgstr ""
+msgstr "\"Scraper\" actual"
 
 msgctxt "#31313"
 msgid "Choose a Scraper"
-msgstr ""
+msgstr "Seleccionar un \"Scraper\""
 
 msgctxt "#31314"
 msgid "Content Scanning Options"
-msgstr ""
-
-#empty strings from id 31315 to 31316
+msgstr "Opciones de búsqueda de contenido"
 
 msgctxt "#31317"
 msgid "Set Fanart Path"
-msgstr ""
-
-#empty string with id 31318
+msgstr "Seleccionar ruta de Fanart"
 
 msgctxt "#31319"
 msgid "Selected Profile"
-msgstr ""
+msgstr "Perfil seleccionado"
 
 msgctxt "#31320"
 msgid "Last Logged In"
-msgstr ""
-
-msgctxt "#31321"
-msgid "Karaoke Song Selector"
-msgstr ""
+msgstr "Login más reciente"
 
 msgctxt "#31322"
 msgid "Aired"
-msgstr ""
-
-#empty strings from id 31323 to 31324
+msgstr "Al aire"
 
 msgctxt "#31325"
 msgid "Playlist Options"
-msgstr ""
+msgstr "Opciones de lista de reproducción"
 
 msgctxt "#31326"
 msgid "Created"
-msgstr ""
+msgstr "Creado"
 
 msgctxt "#31327"
 msgid "Resolution"
-msgstr ""
+msgstr "Resolución"
 
 msgctxt "#31328"
 msgid "Recently Added"
-msgstr ""
-
-msgctxt "#31329"
-msgid "[B]Timer set![/B] [COLOR=grey2] - System auto shutdown in[/COLOR]"
-msgstr ""
+msgstr "Agregado recientemente"
 
 msgctxt "#31330"
 msgid "Click button to play[CR][CR]Movie trailer"
-msgstr ""
+msgstr "Presiona el botón para reproducir[CR][CR]Trailer de película"
 
 msgctxt "#31331"
 msgid "Album Details"
-msgstr ""
-
-#empty strings from id 31332 to 31350
-#Video and Music OSD Labels
+msgstr "Detalles del disco"
 
 msgctxt "#31351"
 msgid "Pause"
-msgstr ""
+msgstr "Pausa"
 
 msgctxt "#31352"
 msgid "Stop"
-msgstr ""
+msgstr "Detener"
 
 msgctxt "#31353"
 msgid "Fast Forward"
-msgstr ""
+msgstr "Adelantar"
 
 msgctxt "#31354"
 msgid "Rewind"
-msgstr ""
+msgstr "Retroceder"
 
 msgctxt "#31355"
 msgid "Movie menu"
-msgstr ""
+msgstr "Menú de Película"
 
 msgctxt "#31356"
 msgid "Download Subtitles"
-msgstr ""
+msgstr "Descargas subtítulos"
 
-#empty strings from id 31357 to 31359
-
-# Stereoscopic labels
 msgctxt "#31360"
 msgid "Watch as 2D"
-msgstr ""
+msgstr "Ver en 2D"
 
 msgctxt "#31361"
 msgid "Change mode"
-msgstr ""
+msgstr "Cambiar modo"
 
 msgctxt "#31362"
 msgid "Enabled"
-msgstr ""
-
-#empty strings from id 31363 to 31389
+msgstr "Habilitado"
 
 msgctxt "#31390"
 msgid "Skin default"
-msgstr ""
+msgstr "Predeterminado del tema"
 
 msgctxt "#31391"
 msgid "Skin default with no Caps"
-msgstr ""
+msgstr "Predeterminado del tema sin mayúsculas"
 
 msgctxt "#31392"
 msgid "Arial based"
-msgstr ""
-
-#empty strings from id 31393 to 31399
-#Description Labels
-
-msgctxt "#31400"
-msgid "[B]CONFIGURE APPEARANCE SETTINGS[/B][CR][CR]Change the skin · Set language and region · Change file listing options[CR]Set up a screensaver"
-msgstr ""
-
-msgctxt "#31401"
-msgid "[B]CONFIGURE VIDEO SETTINGS[/B][CR][CR]Manage your video library · Set video playback options · Change video listing options[CR]Set subtitle fonts"
-msgstr ""
-
-msgctxt "#31402"
-msgid "[B]CONFIGURE MUSIC SETTINGS[/B][CR][CR]Manage your music library · Set music playback options · Change music listing options[CR]Setup song submission · Set karaoke options"
-msgstr ""
-
-msgctxt "#31403"
-msgid "[B]CONFIGURE PICTURE SETTINGS[/B][CR][CR]Set picture listing options · Configure slideshows"
-msgstr ""
-
-msgctxt "#31404"
-msgid "[B]CONFIGURE WEATHER SETTINGS[/B][CR][CR]Set three cities to collect weather information"
-msgstr ""
-
-#empty string with id 31405
-
-msgctxt "#31406"
-msgid "[B]CONFIGURE SYSTEM SETTINGS[/B][CR][CR]Setup and calibrate displays · Configure audio output · Setup remote controls[CR]Set power saving options · Enable debugging · Setup master lock"
-msgstr ""
-
-#empty string with id 31407
-
-msgctxt "#31408"
-msgid "[B]CONFIGURE ADD-ONS[/B][CR][CR]Manage your installed Add-ons · Browse for and install Add-ons from xbmc.org[CR]Modify Add-on settings"
-msgstr ""
-
-msgctxt "#31409"
-msgid "[B]CONFIGURE TV SETTINGS[/B][CR][CR]Change full screen info · Manage EPG data settings"
-msgstr ""
-
-msgctxt "#31410"
-msgid "[B]CONFIGURE SERVICE SETTINGS[/B][CR][CR]Setup control of XBMC via UPnP and HTTP · Configure file sharing[CR]Enable Zeroconf · Configure AirPlay"
-msgstr ""
+msgstr "Basado en \"Arial\""
 
 msgctxt "#31411"
 msgid "First run help...."
-msgstr ""
-
-msgctxt "#31412"
-msgid "This tab signifies that there is a menu off to the side of this window that contains extra options for this section.  To access the menu, navigate to the left with your remote control or keyboard or place your mouse pointer over the tab. [CR][CR]Click \"Ok\" to close this dialogue. It will not appear again."
-msgstr ""
+msgstr "Ayuda inicial...."
 
 msgctxt "#31413"
 msgid "Local subtitle available"
-msgstr ""
-
-#empty strings from id 31414 to 31419
-
-msgctxt "#31420"
-msgid "Login"
-msgstr ""
+msgstr "Subtitulo local disponible"
 
 msgctxt "#31421"
 msgid "Select your XBMC user Profile[CR]to login and continue"
-msgstr ""
-
-msgctxt "#31422"
-msgid "Show or hide the login screen at startup."
-msgstr ""
-
-msgctxt "#31423"
-msgid "Select the profile that will be used at startup when the login screen is disabled."
-msgstr ""
-
-#empty strings from id 31424 to 31500
-
-msgctxt "#31501"
-msgid "Scheduled Time"
-msgstr ""
+msgstr "Selecciona tu perfil de usuario de XBMC[CR]para ingresar y continuar"
 
 msgctxt "#31502"
 msgid "Live TV"
-msgstr ""
+msgstr "TV en Vivo"
 
 msgctxt "#31503"
 msgid "Add Group"
-msgstr ""
+msgstr "Agregar Grupo"
 
 msgctxt "#31504"
 msgid "Rename Group"
-msgstr ""
+msgstr "Cambiar nombre del Grupo"
 
 msgctxt "#31505"
 msgid "Delete Group"
-msgstr ""
+msgstr "Eliminar Grupo"
 
 msgctxt "#31506"
 msgid "Available[CR]Groups"
-msgstr ""
-
-#empty strings from id 31507 to 31508
+msgstr "Grupos[CR]Disponibles"
 
 msgctxt "#31509"
 msgid "Channel Group"
-msgstr ""
-
-msgctxt "#31510"
-msgid "Timer Set"
-msgstr ""
+msgstr "Grupo de Canales"
 
 msgctxt "#31511"
 msgid "Channel Options"
-msgstr ""
-
-#empty strings from id 31512 to 31900
-#Weather plugin
+msgstr "Opciones del Canal"
 
 msgctxt "#31901"
 msgid "36 Hour Forecast"
-msgstr ""
+msgstr "Predicción de 36 horas"
 
 msgctxt "#31902"
 msgid "Hourly Forecast"
-msgstr ""
+msgstr "Predicción por hora"
 
 msgctxt "#31903"
 msgid "Weekend Forecast"
-msgstr ""
+msgstr "Predicción semanal"
 
 msgctxt "#31904"
 msgid "10 Day Forecast"
-msgstr ""
+msgstr "Predicción de 10 días"
 
 msgctxt "#31905"
 msgid "Forecast"
-msgstr ""
-
-#empty strings from id 31906 to 31907
+msgstr "Predicción del clima"
 
 msgctxt "#31908"
 msgid "Chance of Precipitation"
-msgstr ""
+msgstr "Chance de precipitación"
 
 msgctxt "#31909"
 msgid "Fetching forecast info..."
-msgstr ""
+msgstr "Obteniendo información del clima"
 
 msgctxt "#31910"
 msgid "Map & Alerts"
-msgstr ""
-
-#empty strings from id 31911 to 31949
+msgstr "Mapas y Alertas"
 
 msgctxt "#31950"
 msgid "WEATHER"
-msgstr ""
+msgstr "CLIMA"
 
 msgctxt "#31951"
 msgid "PICTURES"
-msgstr ""
+msgstr "IMAGENES"
 
 msgctxt "#31952"
 msgid "LIVE TV"
-msgstr ""
+msgstr "TV EN VIVO"
 
 msgctxt "#31953"
 msgid "VIDEOS"
-msgstr ""
+msgstr "VIDEOS"
 
 msgctxt "#31954"
 msgid "MOVIES"
-msgstr ""
+msgstr "PELICULAS"
 
 msgctxt "#31955"
 msgid "TV SHOWS"
-msgstr ""
+msgstr "SHOWS DE TV"
 
 msgctxt "#31956"
 msgid "MUSIC"
-msgstr ""
+msgstr "MUSICA"
 
 msgctxt "#31957"
 msgid "PROGRAMS"
-msgstr ""
+msgstr "PROGRAMAS"
 
 msgctxt "#31958"
 msgid "PLAY DISC"
-msgstr ""
+msgstr "REPRODUCIR DISCO"
 
 msgctxt "#31959"
 msgid "SYSTEM"
-msgstr ""
+msgstr "SISTEMA"
